# tmuxdeck

./: .gitignore  Makefile  README.md  WORKSPACES-PLAN.md  docker-compose.yml  flake.nix
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: auth.py  cli.py  config.py  ip_allowlist.py  logging_setup.py  main.py  middleware.py  rate_limit.py  store.py
backend/app/api/: auth.py  bridges.py  containers.py  files.py  images.py  notifications.py  ordering.py  sessions.py  settings.py  snapshot.py  workspaces.py
backend/app/schemas/: __init__.py
backend/app/services/: audio.py  bridge_manager.py  container_service.py  docker_manager.py  e2e_crypto.py  notification_manager.py  relay_client.py  relay_manager.py  render.py  snapshot_service.py  telegram_bot.py  tmux_manager.py  voice_agent.py
backend/app/ws/: bridge.py  terminal.py
backend/tests/: test_auth.py  test_e2e_crypto.py  test_ip_allowlist.py  test_rate_limit.py
bridge/: .env.example  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml
bridge/tmuxdeck_bridge/: __main__.py  bridge.py  config.py  terminal.py
cloud-relay/: AGENTS.md  flake.nix  mix.exs
docs/: cloud-relay-design.md  e2e-encryption.md  p2p-encryption-design.md
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
nix/: hm-module.nix  relay-server.nix
scripts/: tmuxdeck-clear-status  tmuxdeck-container-install  tmuxdeck-copy  tmuxdeck-download  tmuxdeck-hook-notification  tmuxdeck-install  tmuxdeck-local-install  tmuxdeck-open  tmuxdeck-status
(+129 files in other folders)
